--- a/reports/index.html
+++ b/reports/index.html
@@ -56,7 +56,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">Sep 7, 2021 07:30:39 PM</span>
+                    <span class="badge badge-primary">Sep 7, 2021 09:08:51 PM</span>
                 </a>
             </li>
         </ul>
@@ -124,8 +124,8 @@
 					<div class="open-test">
 						<div class="test-detail">
 							<p class="name">loginToMercury</p>
-							<p class="duration text-sm">0h 0m 5s+252ms</p>
-							<span class="datetime">19:30:47 PM</span>
+							<p class="duration text-sm">0h 0m 2s+951ms</p>
+							<span class="datetime">21:09:00 PM</span>
 						</div>
 					</div>
 					<div class="test-contents d-none">
@@ -133,9 +133,9 @@
 							<div class="p-v-10 d-inline-block">
 								<div class="info">
 									<h5 class="test-status text-pass">loginToMercury</h5>
-									<span class='badge badge-success'>09.07.2021 19:30:47</span>
-									<span class='badge badge-danger'>09.07.2021 19:30:52</span>
-									<span class='badge badge-default'>0h 0m 5s+252ms</span>
+									<span class='badge badge-success'>09.07.2021 21:09:00</span>
+									<span class='badge badge-danger'>09.07.2021 21:09:03</span>
+									<span class='badge badge-default'>0h 0m 2s+951ms</span>
 								</div>
 								<div class="m-t-10 m-l-5">
 									
@@ -152,7 +152,7 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>7:30:52 PM</td>
+				<td>9:09:03 PM</td>
 				<td>
 						Test was successful
 				</td>
@@ -172,8 +172,8 @@
 					<div class="open-test">
 						<div class="test-detail">
 							<p class="name">loginToMercury</p>
-							<p class="duration text-sm">0h 0m 1s+952ms</p>
-							<span class="datetime">19:30:52 PM</span>
+							<p class="duration text-sm">0h 0m 1s+141ms</p>
+							<span class="datetime">21:09:03 PM</span>
 						</div>
 					</div>
 					<div class="test-contents d-none">
@@ -181,9 +181,9 @@
 							<div class="p-v-10 d-inline-block">
 								<div class="info">
 									<h5 class="test-status text-pass">loginToMercury</h5>
-									<span class='badge badge-success'>09.07.2021 19:30:52</span>
-									<span class='badge badge-danger'>09.07.2021 19:30:54</span>
-									<span class='badge badge-default'>0h 0m 1s+952ms</span>
+									<span class='badge badge-success'>09.07.2021 21:09:03</span>
+									<span class='badge badge-danger'>09.07.2021 21:09:04</span>
+									<span class='badge badge-default'>0h 0m 1s+141ms</span>
 								</div>
 								<div class="m-t-10 m-l-5">
 									
@@ -200,7 +200,7 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>7:30:54 PM</td>
+				<td>9:09:04 PM</td>
 				<td>
 						Test was successful
 				</td>
@@ -300,8 +300,8 @@
 					<div class="media justify-content-between">
 						<div class="card-header">
 							<h6 class="card-title">Start</h6>
-							<h4 class="font-weight-light mt-4">Sep 7, 2021 07:30:39 PM</h4>
-							<span class="text-semibold text-success font-size-15"/>
+							<h4 class="font-weight-light mt-4">Sep 7, 2021 09:08:51 PM</h4>
+							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
 							<i class="fa fa-clock-o font-size-70 text-success opacity-01"></i>
@@ -316,8 +316,8 @@
 					<div class="media justify-content-between">
 						<div class="card-header">
 							<h6 class="card-title">Duration</h6>
-							<h4 class="font-weight-light mt-4">0h 0m 16s+282ms</h4>
-							<span class="text-semibold font-size-15"/>
+							<h4 class="font-weight-light mt-4">0h 0m 12s+720ms</h4>
+							<span class="text-semibold font-size-15">
 						</div>
 						<div class="align-self-end">
 							<i class="fa fa-clock-o font-size-70 opacity-01"></i>
@@ -411,7 +411,7 @@
 </script>
 <script>
 	var timeline = {
-	        "loginToMercury":5.252,"loginToMercury":1.952
+	        "loginToMercury":2.951,"loginToMercury":1.141
 	};
 </script>
                 </div>
